# lumina-v2

./: .gitignore  README.md  SETUP_INSTRUCTIONS.txt
fastapi-server/: .env.example  .gitignore  README.md  pyproject.toml
fastapi-server/src/: __init__.py  main.py
fastapi-server/src/agents/: __init__.py
fastapi-server/src/agents/course/: __init__.py
fastapi-server/src/agents/interview/: tools.py  worker.py
fastapi-server/src/agents/jobs/: __init__.py  discovery_agent.py  insights_agent.py  intent_agent.py  normalization_agent.py  query_agent.py  resume_agent.py  scoring_agent.py
fastapi-server/src/agents/roadmap/: roadmap_agent.py
fastapi-server/src/agents/video_assistant/: teach_back_agent.py  video_assistant_agent.py
fastapi-server/src/agents/video_generation/: video_agent.py
fastapi-server/src/config/: __init__.py  ats_companies.py  scrape_sites.py  settings.py
fastapi-server/src/db/: __init__.py  helpers.py  mongodb.py
fastapi-server/src/graphs/: __init__.py
fastapi-server/src/graphs/course/: __init__.py  graph.py  service.py  state.py
fastapi-server/src/graphs/job_discovery/: __init__.py  graph.py  nodes.py  state.py
fastapi-server/src/models/: __init__.py  research_schemas.py  schemas.py
fastapi-server/src/models/course/: __init__.py  chat_schemas.py  (+10 more)
fastapi-server/src/routers/: __init__.py  chapters.py  chat.py  courses.py  interview.py  jobs.py  materials.py  quiz.py  roadmaps.py  video_assistant.py  videos.py
fastapi-server/src/services/: __init__.py
fastapi-server/src/utils/: analytics.py  anki.py  audio.py  image_gen.py  job_date.py  job_text.py  livekit_recording.py  llm.py  pdf.py  research.py  salary.py  security.py  time.py  translation.py  tts.py  url.py  vector.py  video_transcription.py  youtube.py
(+271 files in other folders)
